--- a/basic/index.html
+++ b/basic/index.html
@@ -11,8 +11,8 @@
       <button onclick="startAnimation()">Start</button>
     </div>
     <div class="mainDiv">
-      <div class="animationContainer">
-      </div>
+      <!-- <div class="animationContainer">
+      </div> -->
     </div>
   </body>
 </html>
