--- a/basic/index.html
+++ b/basic/index.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <div class="options">
-      <button onclick="startAnimation()">Start</button>
+      <button onclick="loop()">Start</button>
     </div>
     <div class="mainDiv">
-      <!-- <div class="animationContainer">
-      </div> -->
     </div>
   </body>
 </html>
