we can slice fruit!!!

--- a/basic/index.html
+++ b/basic/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="options">
-      <button onclick="loop()">Start</button>
+      <button onclick="initializeGame()">Start</button>
     </div>
     <div class="mainDiv">
     </div>
