--- a/basic/index.html
+++ b/basic/index.html
@@ -9,8 +9,12 @@
   <body>
     <div class="options">
       <button onclick="initializeGame()">Start</button>
+
+      <div class="score">Score: 0</div>
     </div>
     <div class="mainDiv">
     </div>
+
+    <div class="youlost"></div>
   </body>
 </html>
